Inbox sorting related LESS.

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -33,6 +33,7 @@ Text colors
 @color-text-downplayed-pressed: darken(@color-text-downplayed, 10%);
 @color-text-downplayed-light: #d3d3d3;
 @color-text-inverse: #FFFFFF;
+@color-text-inverse-pressed: darken(@color-text-inverse, 10%);
 @color-icon-deactivated: #707070;
 @color-icon-deactivated-pressed: darken(@color-icon-deactivated, 10%);
 @color-text-disabled: #b0b0b6;
