--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -130,3 +130,9 @@ Search results
     color: @color-text-downplayed-pressed;
   }
 }
+
+.link-sort:active {
+  *, *:before, *:after {
+    color: @color-text-inverse-pressed;
+  }
+}
