--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -414,3 +414,11 @@ Search results (omnibar, deleted)
     margin-top: 3px;
   }
 }
+
+// 1. Occupy available space.
+.text-sort {
+  color: white;
+  font-size: @size-font-small;
+  height: 100%;   // [1]
+  display: block; // [1]
+}
