--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -422,3 +422,11 @@ Search results (omnibar, deleted)
   height: 100%;   // [1]
   display: block; // [1]
 }
+
+.text-prefixed--label {
+  color: @color-text-downplayed;
+  &.large {
+    line-height: @grid-vertical;
+    font-size: @size-font-medium-large;
+  }
+}
