Make editable-field-container element clickable when the backdrop is active.

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -389,7 +389,7 @@ TODO: working example needed!
 }
 
 .editable-field-container.active {
-  * {
+  &, * {
     pointer-events: auto !important;
   }
 }
