--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -178,6 +178,15 @@ Icon classes
   }
 }
 
+.icon-sort.small {
+  line-height: @grid-vertical-half;
+}
+
+.icon-sort.small:after{
+    color: @color-text-downplayed;
+  font-size: 13px;
+}
+
 // 1. Set dimensions for .icon-trash.
 // 2. Override default vertical-align and ertically align with text.
 //    NOTE: This has to be AFTER .set-icon-font().
