--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -190,6 +190,10 @@ Use `.text-details` to separate details from body text.
   color: @color-text-downplayed;
 }
 
+.asd:first-line {
+  color: black;
+}
+
 /*
 Used with JSON.stringify function and HTML <pre> tag.
 */
