--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -191,6 +191,8 @@ Use `.text-details` to separate details from body text.
 }
 
 .asd:first-line {
+  // line-height: 20px;
+  // font-size: 18px;
   color: black;
 }
 
