--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -725,3 +725,22 @@ TODO: Example needed
     visibility: hidden;
   }
 }
+
+.agenda {
+  display: block;
+  padding-top: 12px;
+  .group-mixed {
+    margin-bottom: -11px;
+    .group-mixed--left {
+      min-width: 78px;
+      width: 78px;
+      .text-agenda--time {
+        // font-size: 15px;
+        line-height: @size-font-content;
+        padding-top: 11px;
+        padding-bottom: 11px;
+        padding-left: 28px;
+      }
+    }
+  }
+}
