Increased width of a time cell for agenda event in android.

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -735,7 +735,6 @@ TODO: Example needed
       min-width: 78px;
       width: 78px;
       .text-agenda--time {
-        // font-size: 15px;
         line-height: @size-font-content;
         padding-top: 11px;
         padding-bottom: 11px;
@@ -743,4 +742,9 @@ TODO: Example needed
       }
     }
   }
+}
+
+.android .agenda .group-mixed--left {
+  min-width: 80px;
+  width: 80px;
 }
