Increased the size of a recurring icon of agenda event.

--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -183,8 +183,8 @@ Icon classes
 }
 
 .icon-sort.small:after{
-    color: @color-text-downplayed;
-  font-size: 13px;
+  color: @color-text-downplayed;
+  font-size: @size-font-medium;
 }
 
 // 1. Set dimensions for .icon-trash.
