Agenda LESS comments.

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -726,25 +726,35 @@ TODO: Example needed
   }
 }
 
+// 1. Justify, like heading.
+//    FIXME: .group-mixed:first-child
+// 2. Decrease space between agenda events.
+//    FIXME: .group-mixed.small-spacing
+// 3. Make room for text inside .group-mixed--left.
+// 4. Match with .text-agenda--title.
+//    NOTE: Here for specificity reasons.
+// 5. Vertical align.
+//    FIXME: .some_general_class_with_text, move to layouts.less
 .agenda {
   display: block;
-  padding-top: 12px;
-  .group-mixed {
-    margin-bottom: -11px;
+  padding-top: 12px;  // [1]
+  .group-mixed.with-checkbox {
+    margin-bottom: -11px; // [2]
     .group-mixed--left {
-      min-width: 78px;
-      width: 78px;
-      .text-agenda--time {
-        line-height: @size-font-content;
-        padding-top: 11px;
-        padding-bottom: 11px;
-        padding-left: 28px;
+      min-width: 78px;  // [3]
+      width: 78px;      // [3]
+      & > .text-agenda--time {
+        line-height: @size-font-content;  // [4]
+        padding-top: @padding-vertically-centered;    // [5]
+        padding-bottom: @padding-vertically-centered; // [5]
+        padding-left: @grid-horizontal;
       }
     }
   }
 }
 
+// 1. Make room for text inside .group-mixed--left
 .android .agenda .group-mixed--left {
-  min-width: 80px;
-  width: 80px;
+  min-width: 80px;  // [1]
+  width: 80px;      // [1]
 }
