Fixed width of a time cell of agenda event to fit the word 'starts' in android.

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -731,6 +731,8 @@ TODO: Example needed
 // 2. Decrease space between agenda events.
 //    FIXME: .group-mixed.small-spacing
 // 3. Make room for text inside .group-mixed--left.
+//    NOTE: 'starts' is the longest word in content which needs to fit inside.
+//          Adjust if changed.
 // 4. Match with .text-agenda--title.
 //    NOTE: Here for specificity reasons.
 // 5. Vertical align.
@@ -754,7 +756,9 @@ TODO: Example needed
 }
 
 // 1. Make room for text inside .group-mixed--left
-.android .agenda .group-mixed--left {
-  min-width: 80px;  // [1]
-  width: 80px;      // [1]
+//    NOTE: 'starts' is the longest word in content which needs to fit inside.
+//          Adjust if changed.
+.android .agenda .group-mixed.with-checkbox .group-mixed--left {
+  min-width: 81px;  // [1]
+  width: 81px;      // [1]
 }
