--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -153,12 +153,12 @@ input[type="checkbox"] + label:before {
   .set-icon-font;
   font-size: @size-checkbox;
   color: @color-text-downplayed-light;
-  content: @icon-selection-empty;
+  content: @icon-circle;
 }
 
 input[type="checkbox"]:checked + label:before {
   color: @color-text-highlighted;
-  content: @icon-selection-checked;
+  content: @icon-circle-checked;
 }
 
 
