--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -1149,7 +1149,7 @@ Not compatible with `.row` so we need to apply padding-left and -right inside.
       display: table-cell;
       vertical-align: middle;
     }
-    & > span.icon-calendar {
+    & > span.icon-calendar, & > span.icon-tag {
       display: block; // [2]
     }
   }
