Agenda calendar name and event location position tweaks.

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -752,6 +752,10 @@ TODO: Example needed
         padding-left: @grid-horizontal;
       }
     }
+    .group-mixed--middle > div {
+      display: inline-block;
+      // vertical-align: -5%;
+    }
   }
 }
 
