--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -764,6 +764,6 @@ TODO: Example needed
 }
 
 // 1. Nudge .text-agenda--details to align it horizontally with the second row of .text-agenda--time.
-.ios .text-agenda--details {
-  margin-top: -1px; // [1]
+.ios .agenda .text-agenda--details {
+  margin-top: 1px; // [1]
 }
