Extended 52211f150bd9bde1b71910f350b40e3ed435a74e from iOS to Android as well.

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -764,6 +764,8 @@ TODO: Example needed
 }
 
 // 1. Nudge .text-agenda--details to align it horizontally with the second row of .text-agenda--time.
-.ios .agenda .text-agenda--details {
+.android,
+.ios {
+.agenda .text-agenda--details {
   margin-top: 1px; // [1]
 }
