Add missing closing bracket into LESS which was missing from 9cfed9042a58d4e55631c5690af3504604cb3925.

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -766,6 +766,7 @@ TODO: Example needed
 // 1. Nudge .text-agenda--details to align it horizontally with the second row of .text-agenda--time.
 .android,
 .ios {
-.agenda .text-agenda--details {
-  margin-top: 1px; // [1]
+  .agenda .text-agenda--details {
+    margin-top: 1px; // [1]
+  }
 }
