Slightly darker toaster background

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -43,7 +43,7 @@ Background colors
 */
 @color-background-menu: #212121;
 @color-background-editor-inactive: #dadada;
-@color-background-toaster: #F1F1F1;
+@color-background-toaster: #EFEFEF;
 @color-background-highlighted: #c1c1c1;
 @color-background-text-highlighted: #d0E7f8;
 @color-background-btn-inactive: #919191;
