Landing page with animation

--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -46,14 +46,17 @@ TODO: Icons are not working yet with Phytoplankton
 @icon-circle: "\e610";
 @icon-sort: "\e611";
 @icon-sort-stop: "\e614";
+@icon-volume-mute: "\e600";
+@icon-volume-up: "\e601";
+@icon-play: "\e615";
 
 @font-face {
   font-family: 'icomoon';
-  src:url('../fonts/icomoon.eot?-hzs7jb');
-  src:url('../fonts/icomoon.eot?#iefix-hzs7jb') format('embedded-opentype'),
-    url('../fonts/icomoon.woff?-hzs7jb') format('woff'),
-    url('../fonts/icomoon.ttf?-hzs7jb') format('truetype'),
-    url('../fonts/icomoon.svg?-hzs7jb#icomoon') format('svg');
+  src:url('../fonts/icomoon.eot?-t2u9ll');
+  src:url('../fonts/icomoon.eot?#iefix-t2u9ll') format('embedded-opentype'),
+    url('../fonts/icomoon.woff?-t2u9ll') format('woff'),
+    url('../fonts/icomoon.ttf?-t2u9ll') format('truetype'),
+    url('../fonts/icomoon.svg?-t2u9ll#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
