--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -96,6 +96,17 @@ Icon classes
   }
 }
 
+.icon-logo-text:after{
+  .set-icon-font();
+  content: @icon-logo-text;
+}
+
+.icon-play:after{
+  .set-icon-font();
+  content: @icon-play;
+}
+
+
 // 1. Set dimensions for .icon-menu.
 // 2. Override default vertical-align and ertically align with text.
 //    NOTE: This has to be AFTER .set-icon-font().
