Some more onboarding work

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -151,3 +151,16 @@ html {
 *:not(pre)::-webkit-scrollbar {
   display: none;
 }
+
+
+.link-disable{
+  pointer-events: none !important;
+}
+
+.hide {
+  display:none;
+}
+
+.invisible {
+  visibility: hidden;
+}
