Untested version of settings feature activation

--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -160,3 +160,7 @@ input[type="checkbox"]:checked + label:before {
   color: @color-text-highlighted;
   content: @icon-circle-checked;
 }
+
+input[type="checkbox"].downplayed:checked + label:before {
+  color: @color-text-downplayed-light;
+}
