Added interdependencies to features, so that it is impossible to get the wrong combination

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -150,6 +150,10 @@ Use `.text-details` to separate details from body text.
   line-height: @grid-vertical-half;
 }
 
+.text-link.downplayed {
+  color: @color-text-downplayed;
+}
+
 // 1. Clear line-height for clamped text.
 //    NOTE: Tested on iOS Safari. Set .ios override class if needed to set something else as default.
 .text-clamped {
