Bounce only once after tutorial

--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -650,10 +650,10 @@ input[type="checkbox"]:checked + label:before {
 
 // From https://coveloping.com/tools/css-animation-generator
 .onboarding .swiper-slide {
-  -webkit-animation:  onboarding-slide-bounce ease-in-out 2s infinite both;
-  -moz-animation:     onboarding-slide-bounce ease-in-out 2s infinite both;
-  -o-animation:       onboarding-slide-bounce ease-in-out 2s infinite both;
-  animation:          onboarding-slide-bounce ease-in-out 2s infinite both;
+  -webkit-animation:  onboarding-slide-bounce ease-in-out 2s 1 both;
+  -moz-animation:     onboarding-slide-bounce ease-in-out 2s 1 both;
+  -o-animation:       onboarding-slide-bounce ease-in-out 2s 1 both;
+  animation:          onboarding-slide-bounce ease-in-out 2s 1 both;
 }
 
 @-webkit-keyframes onboarding-slide-bounce {
