Fixed onboarding problems

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -389,7 +389,7 @@ TODO: working example needed!
 }
 
 .editable-field-container.active {
-  &, * {
+  &, *:not(.link-disable) {
     pointer-events: auto !important;
   }
 }
