--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -677,12 +677,14 @@ a.link-menu.onboarding:not(.highlighted) span {
   animation:         onboarding-menu-pulse ease-in-out 1.5s infinite;
 }
 
+// Bounce acitve and next slide.
 // From https://coveloping.com/tools/css-animation-generator
-.onboarding .swiper-slide {
-  -webkit-animation:  onboarding-slide-bounce ease-in-out 3s 1 both;
-  -moz-animation:     onboarding-slide-bounce ease-in-out 3s 1 both;
-  -o-animation:       onboarding-slide-bounce ease-in-out 3s 1 both;
-  animation:          onboarding-slide-bounce ease-in-out 3s 1 both;
+.onboarding .swiper-slide-active,
+.onboarding .swiper-slide-active + .swiper-slide {
+  -webkit-animation:  onboarding-slide-bounce 2s ease-in-out 1s 1 both;
+  -moz-animation:     onboarding-slide-bounce 2s ease-in-out 1s 1 both;
+  -o-animation:       onboarding-slide-bounce 2s ease-in-out 1s 1 both;
+  animation:          onboarding-slide-bounce 2s ease-in-out 1s 1 both;
 }
 
 @-webkit-keyframes onboarding-slide-bounce {
